Implemented upload-buildinfo-outputs action.
- JavaScript action created, source code available in src folder.
- Jest unit tests added, code available in __tests__ folder.
- Packaged code for GitHub actions available in dist/index.js file.

--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,40 @@
-name: 'Hello World'
-description: 'Greet someone and record the time'
+name: 'Upload Buildinfo Outputs'
+description: 'Upload artifacts found in .buildinfo files outputs sections'
+
 inputs:
-  who-to-greet:  # id of input
-    description: 'Who to greet'
+  search-path:
+    description: >
+      Search path for buildinfo files
     required: true
-    default: 'World'
+    default: '**/*.buildinfo'
+  file-encoding:
+    description: >
+      Encoding used for the buildinfo files
+    default: 'utf-8'
+  retention-days:
+    description: >
+      Duration after which artifact will expire in days. 0 means using default retention.
+
+      Minimum 1 day.
+      Maximum 90 days unless changed from the repository settings page.
+  compression-level:
+    description: >
+      The level of compression for Zlib to be applied to the artifact archive.
+      The value can range from 0 to 9:
+      - 0: No compression
+      - 1: Best speed
+      - 6: Default compression (same as GNU Gzip)
+      - 9: Best compression
+      Higher levels will result in better compression, but will take longer to complete.
+      For large files that are not easily compressed, a value of 0 is recommended for significantly faster uploads.
+    default: '6'
+  overwrite:
+    description: >
+      If true, an artifact with a matching name will be deleted before a new one is uploaded.
+      If false, the action will fail if an artifact for the given name already exists.
+      Does not fail if the artifact does not exist.
+    default: 'false'
+
 outputs:
   time: # id of output
     description: 'The time we greeted you'
